--- a/inji-web/public/index.html
+++ b/inji-web/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <link id="icon" href="/favicon.ico" rel="icon" type="image/x-icon">
     <link href="https://rsms.me/" rel="preconnect">
-    <link id="font" href="https://fonts.google.com/share?selection.family=Inter:wght@100..900 " rel="stylesheet">
+    <link id="font" href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#000000" name="theme-color"/>
     <meta
